--- a/Git-Data.csproj
+++ b/Git-Data.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>Git_Data</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+  </ItemGroup>
+
 </Project>
